--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ buildscript {
         classpath('se.transmode.gradle:gradle-docker:1.2')
         classpath('net.slkdev.swagger.confluence:swagger-confluence-gradle-plugin:2.+')
         classpath('com.benjaminsproule:swagger-gradle-plugin:+')
+
     }
 }
 
@@ -48,5 +49,6 @@ repositories {
 }
 
 dependencies {
+    compile('com.google.apis:google-api-services-youtube:v3-rev182-1.22.0')
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
