--- a/metamodel/build.gradle
+++ b/metamodel/build.gradle
@@ -25,6 +25,17 @@ repositories {
     mavenCentral()
 }
 
+
+sourceSets{
+    main{
+        java{
+            srcDirs = ['model/src/main/java']
+        }
+        resources{
+            srcDirs = ['model/src/main/resources']
+        }
+    }
+}
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
