--- a/workflow/build.gradle
+++ b/workflow/build.gradle
@@ -9,6 +9,16 @@ repositories {
     mavenCentral()
 }
 
+sourceSets{
+    main{
+        java{
+            srcDirs = ['src/main/java']
+        }
+        resources{
+            srcDirs = ['src/main/resources']
+        }
+    }
+}
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
