--- a/channel-connector/build.gradle
+++ b/channel-connector/build.gradle
@@ -17,9 +17,18 @@ sourceSets{
             srcDirs = ['youtube/src/main/resources']
         }
     }
+    test{
+        java{
+            srcDirs = ['youtube/src/test/java']
+        }
+        resources{
+            srcDirs = ['youtube/src/test/resources']
+        }
+    }
 }
 
 dependencies {
     compile('com.google.apis:google-api-services-youtube:v3-rev182-1.22.0')
+    compile('com.fasterxml.jackson.core:jackson-databind:2.6.3')
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
